[tool.poetry]
name = "patserver"
version = "0.1.0"
description = ""
authors = ["Ugrend <git@ugrend.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"
sqlmodel = "^0.0.8"
loguru = "^0.6.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
